--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "just-debounce-it": "^3.2.0",
     "next": "15.1.7",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
