feat: update package dependencies for Redux and related libraries

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "2.6.0",
     "fast-equals": "^5.2.2",
     "next": "15.1.7",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "9.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
