--- a/package.json
+++ b/package.json
@@ -1,33 +1,41 @@
 {
-  "name": "movie-finder",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "2.6.0",
-    "fast-equals": "^5.2.2",
-    "next": "15.1.7",
-    "primeicons": "^7.0.0",
-    "primereact": "^10.9.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-redux": "9.2.0",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "movie-finder",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "2.6.0",
+        "fast-equals": "^5.2.2",
+        "next": "15.1.7",
+        "primeicons": "^7.0.0",
+        "primereact": "^10.9.2",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-redux": "9.2.0",
+        "zod": "^3.24.2"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
+        "@types/jest": "^29.5.14",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.1.7",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5"
+    }
 }
